--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,18 @@
     @apply bg-background text-secondary-foreground;
   }
 }
+
+@layer components {
+    .particles-overlay {
+        background-image:
+            radial-gradient(hsla(var(--accent) / 0.3) 1px, transparent 1px),
+            radial-gradient(hsla(var(--accent) / 0.3) 1px, transparent 1px);
+        background-position: 0 0, 25px 25px;
+        background-size: 50px 50px;
+        animation: particles 20s linear infinite;
+        height: 200%;
+        width: 100%;
+        top: -100%;
+        left: 0;
+    }
+}
