--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,14 +77,14 @@
 }
 
 @layer base {
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+  }
   body {
     @apply bg-background text-secondary-foreground;
   }
   * {
     @apply border-border;
   }
-}
-
-* {
-  max-width: 100vw;
 }
